# A_Design_Patterns

./: CMakeLists.txt  main.cpp
src/Adapter/TemperatureSensor/: CMakeLists.txt  TemperatureSensor.h  VendorA_Adapter.h  VendorA_Thermometer.h  main.cpp
src/Bridge/ADAS/: ADAS.h  ADASv1.cpp  ADASv1.h  ADASv2.cpp  ADASv2.h  AdasWarning.h  AdasWarningv1.cpp  AdasWarningv1.h  AdasWarningv2.cpp  AdasWarningv2.h  CMakeLists.txt  main.cpp
src/Composite/FileSystem/: CMakeLists.txt  File.cpp  File.h  FileSystemComponent.h  Folder.cpp  Folder.h  main.cpp
src/Observer/: CMakeLists.txt  FitnessData.cpp  FitnessData.h  FitnessDataObserver.h  FitnessDataSubject.h  GoalNotifier.cpp  GoalNotifier.h  LiveAcitvityDisplay.cpp  LiveActivityDisplay.h  ProgressLogger.cpp  ProgressLogger.h  main.cpp
src/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h
src/Singleton2/: CMakeLists.txt  Singleton2.cpp  Singleton2.h  main.cpp
